--- a/contact.html
+++ b/contact.html
@@ -9,14 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
   <!-- NAVBAR SECTION -->
   <nav class="navbar navbar-expand-sm sticky-top navbar-dark sticky-top" style="background-color:#6c7d5a">
     <div class="container-fluid">
-      <a class="navbar-brand d-md-none" href="#">
+      <a class="navbar-brand d-md-none" href="Home.html">
         <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,29 +25,29 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">HOME</a>
+            <a class="nav-link active" aria-current="page" href="Home.html">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">ABOUT</a>
+            <a class="nav-link" href="About.html">ABOUT</a>
           </li>
-          <a class="navbar-brand d-none d-md-block" href="#">
+          <a class="navbar-brand d-none d-md-block" href="Home.html">
             <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
           </a>
           <li class="nav-item">
-            <a class="nav-link" href="#">PORTFOLIO</a>
+            <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">CONTACT</a>
+            <a class="nav-link" href="contact.html">CONTACT</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-    <h1 id="contactus">CONTACT US </h1>
+    <h1 id="contactus">CONTACT US </h1><br>
     <!--Marquee-->
-    <marquee behavior="scroll" direction="left" scrollamount="12" style="background-color: white; height:50px; font-size: 30px;">
+    <marquee behavior="scroll" direction="left" scrollamount="12" style="background-color: white; height:40px; font-size:25px;">
       Welcome to our Contact Page! Feel free to reach out to us anytime.
-  </marquee>
+  </marquee><br><br>
     <p id="p">Cosmic Ocassion is a full service event planning and design firm<br> Every detail you provide helps us craft a
          swift and thorough response, so please don’t hold back!<br> We simply can’t wait to hear from you.</p>
        <div id="contact"  >
@@ -127,8 +127,8 @@
   <tr>
     <td id="one">
       <ul id="link">
-        <li><a href="#">PORTFOLIO</a></li>
-        <li><a href="#">SERVICES</a></li>
+        <li><a href="portfolio.html">PORTFOLIO</a></li>
+        <li><a href="services.html">SERVICES</a></li>
         <li><a href="About.html">ABOUT</a></li>
         <li><a href="#">EXPENSE TRACKER</a></li>
       </ul>
@@ -147,7 +147,7 @@
     </td>
     <td id="three">
       <img src="COSMIC_OCCASSIONS-removebg-preview.png" id="lg"><br><br>
-      <a href="#" id="button">CONTACT</a>
+      <a href="contact.html" id="button">CONTACT</a>
     </td>
   </tr>
 </table>
