--- a/cosmic ocassion by mehak/portfolio.html
+++ b/cosmic ocassion by mehak/portfolio.html
@@ -53,7 +53,8 @@
          And Beyond<br> Cosmic Occasion Creates Everything From Dramatic Events To Full Scale Art Installations.
     </div>
     <!--Portfolio-->
-    <div id="gallery"><h1 id="p">Portfolio</h1><br>
+    <div id="gallery">
+      <h1 id="p">Portfolio</h1><br>
         <table id="por">
     <tr>
         <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td><img src="celebrations.jpg" height="250px" width="500px"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
