--- a/services.html
+++ b/services.html
@@ -26,19 +26,19 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                <a class="nav-link active" aria-current="page" href="Home.html">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">ABOUT</a>
+                <a class="nav-link" href="About.html">ABOUT</a>
               </li>
-              <a class="navbar-brand d-none d-md-block" href="#">
+              <a class="navbar-brand d-none d-md-block" href="Home.html">
                 <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
               </a>
               <li class="nav-item">
-                <a class="nav-link" href="#">PORTFOLIO</a>
+                <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link">CONTACT</a>
+                <a class="nav-link"  href="contact.html">CONTACT</a>
               </li>
             </ul>
           </div>
@@ -132,8 +132,8 @@
   <tr>
     <td id="one">
       <ul id="link">
-        <li><a href="#">PORTFOLIO</a></li>
-        <li><a href="#">SERVICES</a></li>
+        <li><a href="portfolio.html">PORTFOLIO</a></li>
+        <li><a href="services.html">SERVICES</a></li>
         <li><a href="About.html">ABOUT</a></li>
         <li><a href="#">EXPENSE TRACKER</a></li>
       </ul>
