--- a/portfolio.html
+++ b/portfolio.html
@@ -25,12 +25,12 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                <a class="nav-link active" aria-current="page" href="Home.html">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">ABOUT</a>
+                <a class="nav-link" href="About.html">ABOUT</a>
               </li>
-              <a class="navbar-brand d-none d-md-block" href="#">
+              <a class="navbar-brand d-none d-md-block" href="Home.html">
                 <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
               </a>
               <li class="nav-item">
