--- a/services.html
+++ b/services.html
@@ -59,7 +59,7 @@
           <!--img-->
             <td><img src="serve.jpg" id="img"></td>
             <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-            <td ><p id="written">Our services vary depending on the event, but here's a general idea of what we offer</p> 
+            <td ><p id="written">Our services vary depending on the event, but here is a general idea of what we offer</p> 
               <!--table-->
            <div id="main">
                 <ul id="one">
@@ -90,8 +90,6 @@
             <li>         Entertainment</li>
 
            </ul></div>
-
-            
             </td>
         </tr>
    
