--- a/contact.html
+++ b/contact.html
@@ -69,15 +69,15 @@
         
 
         <label for="email">Email *</label>
-        <input type="text" id="email" name="email" >
+        <input type="email" id="email" name="email" >
 
         <label for="phone">Mobile Number *</label>
-        <input type="text" id="phone" name="phone" >
+        <input type="number" id="phone" name="phone" >
 
         <label for="add">Address *</label>
-        <input type="text" id="add" name="add" >
+        <input type="" id="add" name="add" >
         <label for="add">Address 1</label>
-        <input type="text" id="add" name="add" >
+        <input type="" id="add" name="add" >
         <label for="add"> Address 2</label><br>
         
    
@@ -89,20 +89,20 @@
         <input type="text" id="state" name="state" >
 
         <label for="code">Zip/Postal Code</label>
-        <input type="text" id="code" name="code" >
+        <input type="number" id="code" name="code" >
 
         <label for="c">Country</label>
         <input type="text" id="c" name="c" >
 
 
         <label for="w">When Will You Celebrate?</label>
-        <input type="text" id="w" name="w" >
+        <input type="number" id="w" name="w" >
 
         <label for="cat">Who is your caterer if decided?</label>
         <input type="text" id="cat" name="cat" >
 
         <label for="guest">How many guests are you anticipating?</label>
-        <input type="text" id="guest" name="guest" >
+        <input type="" id="guest" name="guest" >
 
         <label for="dest">   Destination</label>
         <input type="text" id="dest" name="dest" >
