--- a/services.html
+++ b/services.html
@@ -152,7 +152,7 @@
     </td>
     <td id="three">
       <img src="COSMIC_OCCASSIONS-removebg-preview.png" id="lg"><br><br>
-      <a href="#" id="button">CONTACT</a>
+      <a href="contact.html" id="button">CONTACT</a>
     </td>
   </tr>
 </table>
