--- a/services.html
+++ b/services.html
@@ -44,8 +44,8 @@
           </div>
         </div>
       </nav>
-    <img src="services main.jpg"  id="serve">
-    <div id="m">
+    <div id="serve" class="un">
+    <div id="m"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <h1 id="S">Services</h1>
     <p id="p">
         We plan events and gatherings of any and all sorts, from weddings <br>and other social celebrations,
