--- a/services.html
+++ b/services.html
@@ -95,29 +95,31 @@
    
 </table><br><br>
 <div id="nation">
-   <h1 id="celeb">Celebrations Worldwide</h1>
+<h1 id="celeb">Celebrations Worldwide</h1>
    <ul id="count">
-    <li> Capri, Italy </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-     <li>Bordeaux, France</li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-     <li>Puglia, Italy</li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-     <li> Sveti Stefan, Montenegro</li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-     <li>Paris, France</li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-     <li>  Athens, Greece</li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
-     <li>Ascona, Switzerland</li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-     <li>  Amalfi Coast, Italy</li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-     <li>Dubrovnik, Croatia</li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <li> Saint Barthélemy</li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <li> Sicily, Italy</li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   
-    <li>   Ireland</li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
-    <li>  Morocco</li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <li>  Lake Como, Italy</li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <li>  Istanbul, Turkey</li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <li>   Tuscany, Italy</li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <li>   Positano, Italy</li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <li>London, United Kingdom</li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <li> Capri, Italy </li>
+     <li>Bordeaux, France</li>
+     <li>Puglia, Italy</li>
+     <li> Sveti Stefan, Montenegro</li>
+     <li>Paris, France</li>
+     <li>  Athens, Greece</li>
    </ul>
-  
+   <ul id="count">
+    <li>  Amalfi Coast, Italy</li>
+     <li>Dubrovnik, Croatia</li>
+    <li> Saint Barthélemy</li>
+    <li> Sicily, Italy</li>
+    <li>   Ireland</li>
+    <li>  Morocco</li>
+    <li>Ascona, Switzerland</li>
+   </ul>
+   <ul id="count">
+    <li>  Lake Como, Italy</li>
+    <li>  Istanbul, Turkey</li>
+    <li>   Tuscany, Italy</li>
+    <li>   Positano, Italy</li>
+    <li>London, United Kingdom</li>
+   </ul>
 </div>
 <!-- FOOTER SECTION -->
 <div class="logo-container">
