--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 <body><!-- NAVBAR SECTION -->
 
     <nav class="navbar navbar-expand-sm sticky-top navbar-dark sticky-top" style="background-color:#6c7d5a">
-        <div class="container-fluid">
+        <div \]class="container-fluid">
           <a class="navbar-brand d-md-none" href="#">
             <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
           </a>
