--- a/About.html
+++ b/About.html
@@ -8,8 +8,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="About.css">
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>     -->
+<link rel="stylesheet" href="About.css">
     <title>Cosmic</title>
 </head>
 <body>
@@ -93,7 +95,80 @@ Deliver top-notch results led by expertise, integrity, and innovation.</p>
     </div><br><center>
     <img src="nytm.svg" id="nytm"></center>
 </div><br><br>
+<hr>
+<!-- FAQs SECTION -->
+  <div class="container my-5">
+    <h3 id="faq">FAQs</h3>
+    <div class="accordion" id="faqAccordion">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            What services do you offer?
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            We specialize in a wide range of event planning services, including wedding planning, corporate events, private parties, and themed celebrations. Our services include venue selection, decoration, catering, entertainment, and coordination on the day of the event.          </div>
+        </div>
+      </div>
 
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            How do I book an event with Cosmic Occasions?
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            You can book an event by filling out the contact form on our website or by mailing us directly at cosmicoccasions@gmail.com. We’ll schedule a consultation to discuss your event details and start planning.          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            What is your pricing structure?
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Our pricing varies depending on the type and size of the event, as well as the specific services required. We offer customized packages to fit your budget and needs. Contact us for a detailed quote.          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingFour">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+            Can I see examples of your previous work?
+          </button>
+        </h2>
+        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Absolutely! We have a portfolio section on our website showcasing photos and testimonials from past events. Feel free to browse through to get an idea of our style and capabilities.          </div>
+        </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingFive">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+            Do you assist with planning fundraisers and charity events?          </button>
+        </h2>
+        <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Yes, we can help organize fundraisers and charity events, including planning logistics, managing guests, and coordinating with sponsors. Our goal is to ensure a successful and impactful event for your cause.        </div>
+        </div></div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingSix">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+            What is your cancellation policy?
+          </button>
+        </h2>
+        <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Our cancellation policy varies depending on the services booked and the timing of the cancellation. Please review our full policy on the website or discuss it with us during your consultation.        </div>
+      </div>
+    </div>
+  </div>
+</div></div></div></div>
 <!-- FOOTER SECTION -->
 <div class="logo-container">
   <div class="line"></div>
