--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
         <input type="email" id="email" name="email" >
 
         <label for="phone">Mobile Number *</label>
-        <input type="number" id="phone" name="phone" >
+        <input type="" id="phone" name="phone" >
 
         <label for="add">Address *</label>
         <input type="" id="add" name="add" >
