--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
         <textarea id="text" name="text" ></textarea>
         <br>
         <input type="submit" value="Submit">
-      </form> </div>
+      </form> </div><br><br>
 
 <!-- MODAL SECTION-->
 <center><button id="feed" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#feedbackModal">
