--- a/About.html
+++ b/About.html
@@ -102,11 +102,11 @@ Deliver top-notch results led by expertise, integrity, and innovation.</p>
     <div class="accordion" id="faqAccordion">
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingOne">
-          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
             What services do you offer?
           </button>
         </h2>
-        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
+        <div id="collapseOne" class="accordion-collapse collapse " aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
           <div class="accordion-body">
             We specialize in a wide range of event planning services, including wedding planning, corporate events, private parties, and themed celebrations. Our services include venue selection, decoration, catering, entertainment, and coordination on the day of the event.          </div>
         </div>
