--- a/Home.html
+++ b/Home.html
@@ -51,7 +51,8 @@
 </div><br>
 
 <!-- MARQUEE SECTION -->
-<marquee class="marq" direction="right" loop="" scrollamount="6">
+<marquee class="marq" direction="right" loop="" scrollamount="6">  
+  <!-- Scrollamount is value for speeding the marquee -->
 <div class="geek1">
 <img src="vogue.svg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <img src="harpers.svg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -75,7 +76,7 @@
   <div class="text-box">
       <h3>THE KIND OF PARTY YOUR GUESTS TALK ABOUT FOR DECADES</h3>
       <p>We’re a perfect match to help you plan a celebration that resonates on a deeply personal level; a party that one day you’ll look back on and say: <i>“Wow, that was everything we wanted and more.”</i></p>
-      <a href="#" class="button1">Wander Through Our Eventspiration →</a>
+      <a href="portfolio.html" class="button1">Wander Through Our Eventspiration →</a>
   </div>
 </div>
 <!-- PARALLEX SECTION -->
