--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
 
    <tr>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td> <td><img src="reception.jpeg" height="250px" width="500px"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td id="write">RECEPTIONS<br>EVENING ENTERTAINMENT,AFTER PARTIES,& <br>STUNNING RECEPTION EXPERIENCE</td>
+<td id="write">RECEPTIONS<br>EVENING ENTERTAINMENT,AFTER PARTIES,&amp;<br>STUNNING RECEPTION EXPERIENCE</td>
 <td><a href="reception.html" id="arrow"><img src="arrow-right (1).svg"></a></td>
 </tr><tr>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td><img src="corporate events.jpeg" height="250px" width="500px"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
@@ -76,7 +76,7 @@
 <td><a href="corporate1.html" id="arrow"><img src="arrow-right (1).svg"></a></td>
 </tr><tr>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td> <td><img src="mitzvahs.jpeg" height="250px" width="500px"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td id="write">MITZVAHS<br>BAR &BAT MITZVAHS</td>
+<td id="write">MITZVAHS<br>BAR & BAT MITZVAHS</td>
 <td><a href="mitzvhans.html" id="arrow"><img src="arrow-right (1).svg"></a></td>
 </tr>
 
