--- a/portfolio.html
+++ b/portfolio.html
@@ -56,25 +56,25 @@
       <h1 id="p">Portfolio</h1><br>
         <table id="por">
     <tr>
-        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td><img src="celebrations.jpg" height="250px" width="500px"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td><img src="celebrations.jpg" height="250px" width="500px" id="k"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
     <td id="write">CELEBRATIONS<br>BIRTHDAY,HOLIDAYS AND JUST FOR FUNS </td>
     <td><a href="celebration.html" id="arrow"><img src="arrow-right (1).svg"></a></td>
    </tr>
-   <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td> <td><img src="ceremony.jpeg" height="250px" width="500px"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+   <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td> <td><img src="ceremony.jpeg" height="250px" width="500px" id="k"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
    <td id="write">CEREMONIES<br>MULTICULTURAL,INDIAN,AMERICAN,AND CUSTOM <br>WEDDING CEREMONIES</td>
    <td><a href="ceremonie.html" id="arrow"><img src="arrow-right (1).svg"></a></td>
   </tr>
 
    <tr>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td> <td><img src="reception.jpeg" height="250px" width="500px"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td> <td><img src="reception.jpeg" height="250px" width="500px" id="k"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td id="write">RECEPTIONS<br>EVENING ENTERTAINMENT,AFTER PARTIES,&amp;<br>STUNNING RECEPTION EXPERIENCE</td>
 <td><a href="reception.html" id="arrow"><img src="arrow-right (1).svg"></a></td>
 </tr><tr>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td><img src="corporate events.jpeg" height="250px" width="500px"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td><img src="corporate events.jpeg" height="250px" width="500px" id="k"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td id="write">CORPORATE EVENTS<br>COMPANY CELEBRATION &NETWORKING EVENTS OF<br> EVERY SCALE</td>
 <td><a href="corporate1.html" id="arrow"><img src="arrow-right (1).svg"></a></td>
 </tr><tr>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td> <td><img src="mitzvahs.jpeg" height="250px" width="500px"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td> <td><img src="mitzvahs.jpeg" height="250px" width="500px" id="k"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td id="write">MITZVAHS<br>BAR & BAT MITZVAHS</td>
 <td><a href="mitzvhans.html" id="arrow"><img src="arrow-right (1).svg"></a></td>
 </tr>
