--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
       </form> </div><br><br>
 
 <!-- MODAL SECTION-->
-<center><button id="feed" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#feedbackModal">
+<center><button id="feed" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#feedbackModal">
   Give Feedback
 </button></center>
 <div class="modal fade" id="feedbackModal" tabindex="-1" aria-labelledby="feedbackModalLabel" aria-hidden="true">
