--- a/Home.html
+++ b/Home.html
@@ -113,7 +113,7 @@
 
 <!-- VIDEO SECTION -->
 <div class="loop">
-  <video autoplay="" muted="" loop="" playsinline="" id="myVideo">
+  <video autoplay="" muted="" loop="" id="myVideo">
     <source src="tara_highlight_2 (1080p).mp4" type="video/mp4">
   </video>
   <div class="overlay">
