--- a/reception.html
+++ b/reception.html
@@ -54,7 +54,7 @@
         This incredible Las Vegas ceremony had 7 real waterfalls created. Scroll to view more of our beautiful ceremonies we have created.</div>
       <!-- VIDEO SECTION -->
         <div class="loop">
-        <video autoplay="" muted="ceremonie video.mp4" loop="" playsinline="" id="myVideo">
+        <video autoplay="" muted="ceremonie video.mp4" loop=""  id="myVideo">
           <source src="ceremonie video.mp4" type="video/mp4">
         </video>
         <!--img section-->
