--- a/contact.html
+++ b/contact.html
@@ -117,8 +117,8 @@
         <input type="submit" value="Submit">
       </form> </div><br><br>
 
-<!-- MODAL SECTION-->
-<center><button id="feed" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#feedbackModal">
+<!-- MODAL SECTION
+<center><button id="feed" type="button" class="btn " data-bs-toggle="modal" data-bs-target="#feedbackModal">
   Give Feedback
 </button></center>
 <div class="modal fade" id="feedbackModal" tabindex="-1" aria-labelledby="feedbackModalLabel" aria-hidden="true">
@@ -145,7 +145,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- for EVAL-2 -->
 <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
