--- a/Home.html
+++ b/Home.html
@@ -109,11 +109,12 @@
   <div class="p3">
     <div class="im2"><img src="i6.jpeg"></div>
   </div>
-</div><br><br>
+</div>
+<br><br>
 
 <!-- VIDEO SECTION -->
 <div class="loop">
-  <video autoplay="" muted="" loop="" playsinline="" id="myVideo">
+  <video autoplay="" muted="" loop="" id="myVideo">
     <source src="tara_highlight_2 (1080p).mp4" type="video/mp4">
   </video>
   <div class="overlay">
