--- a/About.html
+++ b/About.html
@@ -184,7 +184,7 @@ Deliver top-notch results led by expertise, integrity, and innovation.</p>
         <li><a href="portfolio.html">PORTFOLIO</a></li>
         <li><a href="services.html">SERVICES</a></li>
         <li><a href="About.html">ABOUT</a></li>
-        <li><a href="#">EXPENSE TRACKER</a></li>
+        <li><a href="Expense Tracker.html">EXPENSE TRACKER</a></li>
       </ul>
     </td>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
