--- a/Expense Tracker.html
+++ b/Expense Tracker.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
@@ -15,7 +16,7 @@
   <title>Expense Tracker</title>
 </head>
 <body>
-  <div class="container">
+  <div class="container1">
  <!-- NAVBAR SECTION -->
  <nav class="navbar navbar-expand-sm sticky-top navbar-dark sticky-top" style="background-color:#6c7d5a ">
     <div class="container-fluid">
@@ -45,82 +46,68 @@
         </ul>
       </div>
     </div>
-  </nav><br><br>
-    <h2>Track your expenses</h2>
-    <div class="error_message">
-      <p>Please Enter Budget Amount | More Than 0</p>
+  </nav>
+  <main><br><br>
+  <div class="container center">
+    <div class="balanceHead">
+        <div class="balance">
+            <p>My Balance</p>
+            <h1 id="balanceVal">₹ 000</h1>
+        </div>
+        <img src="./logo.svg" alt="">
     </div>
-    <div class="budget_content">
-      <div class="ur_budget">
-        <form>
-          <label for="budget">Your Budget : </label>
-          <input
-            type="number"
-            placeholder="Enter Your Budget"
-            class="budget_input"
-          />
-          <button class="btn" id="btn_budget">Calculate</button>
-        </form>
-      </div>
-      <div class="ur_expenses">
-        <form>
-          <label for="expenses">Expenses Details : </label>
-          <input
-            type="text"
-            placeholder="Enter Your Expenses Desc!"
-            class="expensess_input"
-          />
-          <input
-            type="number"
-            placeholder="Enter Your Expenses Amount"
-            class="expensess_amount"
-          />
-          <button class="btn" id="btn_expenses">Add Expenses</button>
-        </form>
-      </div>
+    <div class="formContainer">
+        <h3>ADD BUDGET</h3>
+        <div class="budgetInput">
+            <input type="number" placeholder="Enter Amount in Numbers, e.g.5000" id="budget">
+            <button onclick="addBudget();">Add Budget</button>
+        </div>
+        <h3>ADD EXPENSE</h3>
+        <div class="expenseInput">
+            <select name="description" id="description" required>
+                <option value="" selected hidden disabled>Description</option>
+                <option value="Venue">Venue</option>
+                <option value="Equipments">Equipments</option>
+                <option value="Decor">Decor</option>
+                <option value="Catering">Catering</option>
+                <option value="Transportation">Transportation</option>
+                <option value="Team and staff">Team and staff</option>
+                <option value="Miscellaneous">Miscellaneous</option>
+            </select>
+            <input type="number" placeholder="Enter Amount" id="expenseVal">
+            <input type="date" name="date" id="date">
+            <button onclick="addExpense();">Add Expense</button>
+        </div> 
     </div>
-<!--==========Cards Start============= -->
-    <ul class="cards">
-      <li>
-        <i class="bx bx-money"></i>
-        <span class="info">
-          <h3><span>$</span><span class="budget_card">7,373</span></h3>
-          <p>Budget</p>
-        </span>
-      </li>
-      <li>
-        <i class="bx bx-credit-card"></i>
-        <span class="info">
-          <h3><span>$</span><span class="expenses_card">9,373</span></h3>
-          <p>Expenses</p>
-        </span>
-      </li>
-      <li>
-        <i class="bx bx-dollar"></i>
-        <span class="info">
-          <h3><span>$</span><span class="balance_card">3,373</span></h3>
-          <p>Balance</p>
-        </span>
-      </li>
-    </ul>
-    <!--==========Cards Close============= -->
-    <!--===============Table Content Start=============== -->
-    <div class="tbl_content">
-      <h3>Budget Details</h3>
-      <div class="tbl_data">
-        <!-- <ul class="tbl_tr_content">
-          <li>1</li>
-          <li>Gaming Mouse</li>
-          <li><span>$</span>600</li>
-          <li>
-            <button type="button" class="btn_edit">Edit</button>
-            <button type="button" class="btn_delete">Delete</button>
-          </li>
-        </ul> -->
-      </div>
+    <div class="overview balanceHead">
+        <div>
+            <p>Total Budget</p>
+            <h1 id="total">₹ 000</h1>
+        </div>
+        <div>
+            <p>Expenses</p>
+            <h1 id="expense">₹ 000</h1>
+        </div>
     </div>
-    <!--===============Table Content Close=============== -->
+    <div class="expenseList formContainer">
+        <h2>Expense List</h2>
+        <table id="abc">
+            <thead id="yz">
+                <tr id="op">
+                    <td id="lk">Description</td>
+                    <td id="lk">Amount</td>
+                    <td id="lk">Date</td>
+                    <td id="lk"></td>
+                </tr>
+            </thead>
+            <tbody id="expenseList">
 
+            </tbody>
+        </table>
+    </div>
+</div><br><br>
+<script src="Expense Tracker.js"></script>
+</main>
 <!-- FOOTER SECTION -->
 <div class="logo-container">
     <div class="line"></div>
@@ -135,7 +122,7 @@
           <li><a href="portfolio.html">PORTFOLIO</a></li>
           <li><a href="services.html">SERVICES</a></li>
           <li><a href="About.html">ABOUT</a></li>
-          <li><a href="#">EXPENSE TRACKER</a></li>
+          <li><a href="Expense Tracker.html">EXPENSE TRACKER</a></li>
         </ul>
       </td>
       <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
