--- a/reception.html
+++ b/reception.html
@@ -80,7 +80,7 @@
         <li><a href="portfolio.html">PORTFOLIO</a></li>
         <li><a href="services.html">SERVICES</a></li>
         <li><a href="About.html">ABOUT</a></li>
-        <li><a href="#">EXPENSE TRACKER</a></li>
+        <li><a href="Expense Tracker.html">EXPENSE TRACKER</a></li>
       </ul>
     </td>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
