--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@
         <input type="submit" value="Submit">
       </form> </div><br><br>
 
-<!-- MODAL SECTION
+<!-- MODAL SECTION -->
 <center><button id="feed" type="button" class="btn " data-bs-toggle="modal" data-bs-target="#feedbackModal">
   Give Feedback
 </button></center>
@@ -148,7 +148,7 @@
 </div> -->
 
 <!-- for EVAL-2 -->
-<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
     document.querySelectorAll('.emoji').forEach(emoji => {
@@ -157,7 +157,7 @@
             this.classList.add('selected');
         });
     });
-</script> -->
+</script>
 
   
       <!-- FOOTER SECTION -->
