--- a/celebdemo.html
+++ b/celebdemo.html
@@ -9,12 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <title>Reception</title>
-    <link rel="stylesheet" href="reception.css">
-
+    <title>Celebration</title>
+    <link rel="stylesheet" href="celebdemo.css">
 </head>
 <body>
-    <!-- NAVBAR SECTION -->
+<!-- NAVBAR -->
     <nav class="navbar navbar-expand-sm sticky-top navbar-dark sticky-top" style="background-color:#6c7d5a">
         <div class="container-fluid">
           <a class="navbar-brand d-md-none" href="#">
@@ -31,7 +30,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="About.html">ABOUT</a>
               </li>
-              <a class="navbar-brand d-none d-md-block" href="Home.html">
+              <a class="navbar-brand d-none d-md-block" href="#">
                 <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
               </a>
               <li class="nav-item">
@@ -44,24 +43,18 @@
           </div>
         </div>
       </nav>
+<!-- PARALLEX -->
     <div class="blank"></div>
-  <!-- PARALLEX SECTION -->
     <div class="container">
-        <h1>RECEPTION</h1>
+        <h1>CELEBRATION</h1>
       </div>
       <div class="blank"></div>
-   <div class="written">Our stunning waterfall ceremony captured on film.
-        This incredible Las Vegas ceremony had 7 real waterfalls created. Scroll to view more of our beautiful ceremonies we have created.</div>
-      <!-- VIDEO SECTION -->
-        <div class="loop">
-        <video autoplay="" muted="ceremonie video.mp4" loop=""  id="myVideo">
-          <source src="ceremonie video.mp4" type="video/mp4">
-        </video>
-        <!-- CARDS -->
+      <br><br><br>
+<!-- CARDS -->
     <div class = container1>
       <div class = card>
         <div class = image>
-          <img src = "r1.jpg" id="pika">
+          <img src = "cb1.jpg" id="pika">
         </div>
         <div class = content>
           <h3>This is content</h3>
@@ -71,7 +64,7 @@
    
       <div class = card>
         <div class = image>
-          <img src = "r2.jpg" id="pika">
+          <img src = "cb2.jpg" id="pika">
         </div>
         <div class = content>
           <h3>This is content</h3>
@@ -80,7 +73,7 @@
       </div>    
       <div class = card>
         <div class = image>
-          <img src = "r3.jpeg" id="pika">
+          <img src = "cb3.jpg" id="pika">
         </div>
         <div class = content>
           <h3>This is content</h3>
@@ -91,7 +84,7 @@
     <div class = container1>
       <div class = card>
         <div class = image>
-          <img src = "r4.jpeg" id="pika">
+          <img src = "cb4.jpg" id="pika">
         </div>
         <div class = content>
           <h3>This is content</h3>
@@ -101,7 +94,7 @@
       
       <div class = card>
         <div class = image>
-          <img src = "r5.jpeg" id="pika">
+          <img src = "cb5.jpg" id="pika">
         </div>
         <div class = content>
           <h3>This is content</h3>
@@ -110,7 +103,7 @@
       </div> 
       <div class = card>
         <div class = image>
-          <img src = "r6.jpeg" id="pika">
+          <img src = "cb6.jpg" id="pika">
         </div>
         <div class = content>
           <h3>This is content</h3>
@@ -118,42 +111,41 @@
         </div>
       </div> 
     </div>
-     
-    <!-- FOOTER SECTION -->
+ <!-- FOOTER SECTION -->
 <div class="logo-container">
-  <div class="line"></div>
-  <div class="logo"><img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png"></div>
-  <div class="line"></div>
-</div>
-<footer>
-<table>
-  <tr>
-    <td id="one">
-      <ul id="link">
-        <li><a href="portfolio.html">PORTFOLIO</a></li>
-        <li><a href="services.html">SERVICES</a></li>
-        <li><a href="About.html">ABOUT</a></li>
-        <li><a href="Expense Tracker.html">EXPENSE TRACKER</a></li>
-      </ul>
-    </td>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    </td>
-    <td id="two"><div class="next">
-      <p>Destination weddings & events worldwide.</p>
-      <h6>join us @cosmic_occasions</h6>
-      <br><br><br>
-      <h7>© 2019 Cosmic Occasions. All Rights Reserved.</h7>
-    </div></td>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    </td>
-    <td id="three">
-      <img src="COSMIC_OCCASSIONS-removebg-preview.png" id="lg"><br><br>
-      <a href="contact.html" id="button">CONTACT</a>
-    </td>
-  </tr>
-</table>
-</footer>
-</body>
-</html>
+    <div class="line"></div>
+    <div class="logo"><img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png"></div>
+    <div class="line"></div>
+  </div>
+  <footer>
+  <table>
+    <tr>
+      <td id="one">
+        <ul id="link">
+          <li><a href="portfolio.html">PORTFOLIO</a></li>
+          <li><a href="services.html">SERVICES</a></li>
+          <li><a href="About.html">ABOUT</a></li>
+          <li><a href="Expense Tracker.html">EXPENSE TRACKER</a></li>
+        </ul>
+      </td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      </td>
+      <td id="two"><div class="next">
+        <p>Destination weddings & events worldwide.</p>
+        <h6>join us @cosmic_occasions</h6>
+        <br><br><br>
+        <h7>© 2019 Cosmic Occasions. All Rights Reserved.</h7>
+      </div></td>
+      <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      </td>
+      <td id="three">
+        <img src="COSMIC_OCCASSIONS-removebg-preview.png" id="lg"><br><br>
+        <a href="contact.html" id="button">CONTACT</a>
+      </td>
+    </tr>
+  </table>
+  </footer>
+  </body>
+  </html>
