--- a/celebration.html
+++ b/celebration.html
@@ -49,14 +49,67 @@
       </div>
       <div class="blank"></div>
       
-    <div id="contain">
-        <img src="cb1.jpg" height="350px" width="350px" id="ima">
-        <img src="cb2.jpg" height="350px" width="350px" id="ima">
-        <img src="cb3.jpg" height="350px" width="350px" id="ima">
-        <img src="cb4.jpg" height="350px" width="350px" id="ima">
-        <img src="cb5.jpg" height="350px" width="350px" id="ima">
-        <img src="cb6.jpg" height="350px" width="350px"  id="ima">
-    </div>
+  <!-- CARDS -->
+  <div class = container1>
+    <div class = card>
+      <div class = image>
+        <img src = "cb1.jpg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+       <p>In publishing and graphic design,</p>
+      </div>
+    </div>    
+ 
+    <div class = card>
+      <div class = image>
+        <img src = "cb2.jpg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div>    
+    <div class = card>
+      <div class = image>
+        <img src = "cb3.jpg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div> 
+  </div> 
+  <div class = container1>
+    <div class = card>
+      <div class = image>
+        <img src = "cb4.jpg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div>  
+    
+    <div class = card>
+      <div class = image>
+        <img src = "cb5.jpg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div> 
+    <div class = card>
+      <div class = image>
+        <img src = "cb6.jpg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div> 
+  </div>
     <!-- FOOTER SECTION -->
 <div class="logo-container">
   <div class="line"></div>
