--- a/ceremonie.html
+++ b/ceremonie.html
@@ -57,15 +57,67 @@
         <video autoplay="" muted="ceremonie video.mp4" loop=""  id="myVideo">
           <source src="ceremonie video.mp4" type="video/mp4">
         </video>
-        <!--img section-->
-    <div id="contain">
-        <img src="c1.jpg" height="350px" width="350px" id="ima">
-        <img src="c2.jpg" height="350px" width="350px" id="ima">
-        <img src="c3.jpeg" height="350px" width="350px" id="ima">
-        <img src="c4.jpeg" height="350px" width="350px" id="ima">
-        <img src="c5.jpeg" height="350px" width="350px"id="ima">
-        <img src="c6.jpeg" height="350px" width="350px"id="ima">
-    </div>
+   <!-- CARDS -->
+   <div class = container1>
+    <div class = card>
+      <div class = image>
+        <img src = "c1.jpg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+       <p>In publishing and graphic design,</p>
+      </div>
+    </div>    
+ 
+    <div class = card>
+      <div class = image>
+        <img src = "c2.jpg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div>    
+    <div class = card>
+      <div class = image>
+        <img src = "c3.jpeg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div> 
+  </div> 
+  <div class = container1>
+    <div class = card>
+      <div class = image>
+        <img src = "c4.jpeg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div>  
+    
+    <div class = card>
+      <div class = image>
+        <img src = "c5.jpeg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div> 
+    <div class = card>
+      <div class = image>
+        <img src = "c6.jpeg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div> 
+  </div>
     <!-- FOOTER SECTION -->
 <div class="logo-container">
   <div class="line"></div>
