--- a/corporate1.html
+++ b/corporate1.html
@@ -49,15 +49,67 @@
         <h1>CORPORATE EVENTS</h1>
       </div>
       <div class="blank"></div>
-    <!--img section-->
-    <div id="contain">
-        <img src="cp6.jpg" height="350px" width="350px" id="ima">
-        <img src="cp5.jpg" height="350px" width="350px" id="ima">
-        <img src="cp4.jpg" height="350px" width="350px" id="ima">
-        <img src="cp1.jpeg" height="350px" width="350px" id="ima">
-        <img src="cp2.jpg" height="350px" width="350px" id="ima">
-        <img src="cp3.jpg" height="350px" width="350px" id="ima">
-    </div>
+  <!-- CARDS -->
+  <div class = container1>
+    <div class = card>
+      <div class = image>
+        <img src = "cp1.jpeg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+       <p>In publishing and graphic design,</p>
+      </div>
+    </div>    
+ 
+    <div class = card>
+      <div class = image>
+        <img src = "cp2.jpg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div>    
+    <div class = card>
+      <div class = image>
+        <img src = "cp3.jpg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div> 
+  </div> 
+  <div class = container1>
+    <div class = card>
+      <div class = image>
+        <img src = "cp4.jpg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div>  
+    
+    <div class = card>
+      <div class = image>
+        <img src = "cp5.jpg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div> 
+    <div class = card>
+      <div class = image>
+        <img src = "cp6.jpg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div> 
+  </div>
     <!-- FOOTER SECTION -->
 <div class="logo-container">
   <div class="line"></div>
