--- a/mitzvhans.html
+++ b/mitzvhans.html
@@ -49,15 +49,67 @@
         <h1>MITZVAHS</h1>
       </div>
       <div class="blank"></div>
-   <!--img section-->
-    <div id="contain">
-        <img src="m1.jpg" height="350px"width="350px" id="ima">
-        <img src="m2.jpg" height="350px"width="350px"id="ima">
-        <img src="m3.jpg" height="350px" width="350px"id="ima">
-        <img src="m4.jpg" height="350px" width="350px"id="ima">
-        <img src="m5.jpg" height="350px" width="350px"id="ima">
-        <img src="m6.jpg" height="350px" width="350px"id="ima">
-    </div>
+   <!-- CARDS -->
+   <div class = container1>
+    <div class = card>
+      <div class = image>
+        <img src = "m1.jpg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+       <p>In publishing and graphic design,</p>
+      </div>
+    </div>    
+ 
+    <div class = card>
+      <div class = image>
+        <img src = "m2.jpg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div>    
+    <div class = card>
+      <div class = image>
+        <img src = "m3.jpg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div> 
+  </div> 
+  <div class = container1>
+    <div class = card>
+      <div class = image>
+        <img src = "m4.jpg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div>  
+    
+    <div class = card>
+      <div class = image>
+        <img src = "m5.jpg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div> 
+    <div class = card>
+      <div class = image>
+        <img src = "m6.jpg" id="pika">
+      </div>
+      <div class = content>
+        <h3>This is content</h3>
+        <p>In publishing and graphic design,</p>
+      </div>
+    </div> 
+  </div>
     <!-- FOOTER SECTION -->
 <div class="logo-container">
   <div class="line"></div>
