--- a/pika.html
+++ b/pika.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class = container>
+    <div class = container1>
       <div class = card>
         <div class = image>
           <img src = "mitzvahs.jpeg">
@@ -17,6 +17,56 @@
           <p>DIn publishing and graphic design,           Lorem ipsum is a placeholder text               commonly used to demonstrate the visual         form of a document or a typeface without         relying on meaningful content.</p>
         </div>
       </div>    
+   
+      <div class = card>
+        <div class = image>
+          <img src = "mitzvahs.jpeg">
+        </div>
+        <div class = content>
+          <h3>This is content</h3>
+          <p>DIn publishing and graphic design,           Lorem ipsum is a placeholder text               commonly used to demonstrate the visual         form of a document or a typeface without         relying on meaningful content.</p>
+        </div>
+      </div>    
+      <div class = card>
+        <div class = image>
+          <img src = "mitzvahs.jpeg">
+        </div>
+        <div class = content>
+          <h3>This is content</h3>
+          <p>DIn publishing and graphic design,           Lorem ipsum is a placeholder text               commonly used to demonstrate the visual         form of a document or a typeface without         relying on meaningful content.</p>
+        </div>
+      </div> 
+    </div> 
+    <div class = container1>
+      <div class = card>
+        <div class = image>
+          <img src = "mitzvahs.jpeg">
+        </div>
+        <div class = content>
+          <h3>This is content</h3>
+          <p>DIn publishing and graphic design,           Lorem ipsum is a placeholder text               commonly used to demonstrate the visual         form of a document or a typeface without         relying on meaningful content.</p>
+        </div>
+      </div>  
+      
+      <div class = card>
+        <div class = image>
+          <img src = "mitzvahs.jpeg">
+        </div>
+        <div class = content>
+          <h3>This is content</h3>
+          <p>DIn publishing and graphic design,           Lorem ipsum is a placeholder text               commonly used to demonstrate the visual         form of a document or a typeface without         relying on meaningful content.</p>
+        </div>
+      </div> 
+      <div class = card>
+        <div class = image>
+          <img src = "mitzvahs.jpeg">
+        </div>
+        <div class = content>
+          <h3>This is content</h3>
+          <p>DIn publishing and graphic design,           Lorem ipsum is a placeholder text               commonly used to demonstrate the visual         form of a document or a typeface without         relying on meaningful content.</p>
+        </div>
+      </div> 
     </div>
+    
   </body>
 </html>
